Bug 79968 - FILESAVE: DOCX embedded with PowerPoint object is not preserved after RT
Summary: FILESAVE: DOCX embedded with PowerPoint object is not preserved after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Yogesh Bharate
URL:
Whiteboard: BSA target:4.4.0 target:4.3.1
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-13 05:42 UTC by Yogesh Bharate
Modified: 2014-07-16 13:46 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Document contains Powerpoint Slide embedded (50.13 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-13 05:42 UTC, Yogesh Bharate
Details
object_PowerPoint_97_2003 embedded in DOC (38.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-13 05:44 UTC, Yogesh Bharate
Details
Screenshot of PowerPoint embedded DOC RT open in MSO 2010 (58.64 KB, image/jpeg)
2014-06-13 05:47 UTC, Yogesh Bharate
Details
Screenshot of PowerPoint_97_2003 embedded DOC RT open in MSO 2010 (58.55 KB, image/jpeg)
2014-06-13 05:48 UTC, Yogesh Bharate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yogesh Bharate 2014-06-13 05:42:18 UTC
Created attachment 100951 [details]
Document contains Powerpoint Slide embedded

Problem description: 

Steps to reproduce:
1. Open the document in LibreOffice.
2. Save as .docx
3. Open in MS Office 2010.

Current behavior:
Powerpoint slide embedded in DOCX is not preserved after RT.

Expected behavior:
Powerpoint slide embedded in DOCX is preserved after RT.
              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Yogesh Bharate 2014-06-13 05:44:07 UTC
Created attachment 100952 [details]
object_PowerPoint_97_2003 embedded in DOC
Comment 2 Yogesh Bharate 2014-06-13 05:47:42 UTC
Created attachment 100953 [details]
Screenshot of PowerPoint embedded DOC RT open in MSO 2010
Comment 3 Yogesh Bharate 2014-06-13 05:48:17 UTC
Created attachment 100954 [details]
Screenshot of PowerPoint_97_2003 embedded DOC RT open in MSO 2010
Comment 4 Yogesh Bharate 2014-06-13 05:49:51 UTC
- Similar issue occured when we embedded the PowerPoint 97-2003 Presentation to DOCX.
- Attached the Screenshot & files for both scenarios.
Comment 5 Yogesh Bharate 2014-06-13 08:12:58 UTC
On latest master build (Version: 4.4.0.0.alpha0+
Build ID: fd8cee8c1fb34432b786d54651f33b6c961ca7fe )
issue is fixed for embedded powerpoint 97-2003 presentation.
Comment 6 Jorendc 2014-06-13 09:02:18 UTC
(In reply to comment #5)
> On latest master build (Version: 4.4.0.0.alpha0+
> Build ID: fd8cee8c1fb34432b786d54651f33b6c961ca7fe )
> issue is fixed for embedded powerpoint 97-2003 presentation.

Correct, see Jacobo's fix: http://cgit.freedesktop.org/libreoffice/core/commit/?id=06a5bbd720b89d629ebf6ccf0d9a62a77c2d9a28 and bug report bug 79691.

It fixes indeed .ppt embedding.
@Yogesh: same issue for .pptx embedding or is this issue a duplicate of jacobo's bug?

Kind regards,
Joren
Comment 7 Yogesh Bharate 2014-06-13 09:07:09 UTC
@Jorendc: nope
This is related with .sldx, which is get converted to .bin after RT.
Comment 8 Jorendc 2014-06-13 09:08:18 UTC
(In reply to comment #7)
> @Jorendc: nope
> This is related with .sldx, which is get converted to .bin after RT.

Okay, thanks for your quick reply -> NEW right away ;-). Have a nice day!
Comment 9 Jacobo Aragunde Pérez 2014-06-13 09:59:56 UTC
Hi Yogesh, take a look at the fix Jorendc linked before. Your fix would be really similar but for ProgID="PowerPoint.Slide.12".
Comment 10 Yogesh Bharate 2014-06-13 11:48:56 UTC
Hi Jacobo ..
Yeah... Thanks :)
Comment 11 Commit Notification 2014-06-20 08:16:32 UTC
Yogesh Bharate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f8785074512d6442fd97d67860fd625ac4d6bb1

fdo#79968: & fdo#79969: Fix for embedded powerpoint & excel sheet in docx.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-07-11 12:04:48 UTC
Yogesh Bharate committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=de0d60327e2cd274f55e73417d3281e4a81b2271&h=libreoffice-4-3

fdo#79968: & fdo#79969: Fix for embedded powerpoint & excel sheet in docx.


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.