sw/source/filter/ww8/docxattributeoutput.cxx
@@ -4328,6 +4328,18 @@ void DocxAttributeOutput::WriteOLE( SwOLENode& rNode, const Size& rSize, const S
         sRelationType = "http://schemas.openxmlformats.org/officeDocument/2006/relationships/package";
         sFileExtension = "xlsx";
     }
+    else if(sProgID.startsWith("Excel.SheetBinaryMacroEnabled.12") )
+    {
+        sMediaType = "application/vnd.ms-excel.sheet.binary.macroEnabled.12";
+        sRelationType = "http://schemas.openxmlformats.org/officeDocument/2006/relationships/package";
+        sFileExtension = "xlsb";
+    }
+    else if( sProgID.startsWith("Excel.SheetMacroEnabled.12") )
+    {
+        sMediaType = "application/vnd.ms-excel.sheet.macroEnabled.12";
+        sRelationType = "http://schemas.openxmlformats.org/officeDocument/2006/relationships/package";
+        sFileExtension = "xlsm";
+    }
     else if( sProgID.startsWith("Excel.Sheet") )
     {
         sMediaType = "application/vnd.ms-excel";
@@ -4345,6 +4357,12 @@ void DocxAttributeOutput::WriteOLE( SwOLENode& rNode, const Size& rSize, const S
         sMediaType = "application/vnd.ms-powerpoint";
         sRelationType = "http://schemas.openxmlformats.org/officeDocument/2006/relationships/oleObject";
         sFileExtension = "ppt";
+    }
+    else if (sProgID.startsWith("PowerPoint.Slide.12"))
+    {
+        sMediaType = "application/vnd.openxmlformats-officedocument.presentationml.slide";
+       sRelationType = "http://schemas.openxmlformats.org/officeDocument/2006/relationships/package";
+       sFileExtension = "sldx";
     }
     else
     {
